# covid-mobility

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: dependabot.yml
covid_mobility/: main.py
covid_mobility/data/: load.py  partition.py  wrangle.py
covid_mobility/visualization/: interactive.py  visualize.py
notebooks/: apple_mobility_exploration_1.html  apple_mobility_exploration_1.ipynb
scripts/: setup-poetry.sh
