[tool.poetry]
name = "covid-mobility"
version = "0.1.0"
description = ""
authors = ["Setu Shah <setu+covid-movement@setu.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
altair = "^4.2.0"
streamlit = "^1.1.1"

[tool.poetry.dev-dependencies]
ipython = "^7.31.1"
black = "^19.10b0"
mypy = "^0.782"
isort = "^5.3.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
