[tool.poetry]
name = "covid-mobility"
version = "0.1.0"
description = ""
authors = ["Setu Shah <setu+covid-movement@setu.me>"]

[tool.poetry.dependencies]
python = "^3.9.16"
pandas = "^1.4.3"
altair = "^4.2.0"
streamlit = "^1.37.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^24.3.0"
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
